# practica3

./: CMakeLists.txt  funciones.cpp  funciones.h  main.cpp
